# cdl-slides

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: sample_poster.md  sample_presentation.html  sample_presentation.md
scripts/: install-system-deps.sh
src/cdl_slides/: __init__.py  __main__.py  animate_parser.py  animate_transpiler.py  assets.py  cli.py  compiler.py  manim_renderer.py  marp_cli.py  poster_compiler.py  poster_preprocessor.py  preprocessor.py
src/cdl_slides/assets/js/: chart-animations.js  chart-defaults.js
src/cdl_slides/assets/themes/: cdl-poster-theme.css  cdl-theme.css
tests/: conftest.py  test_animate_parser.py  test_animate_transpiler.py  test_assets.py  test_cli.py  test_compiler.py  test_manim_renderer.py  test_marp_cli.py  test_poster_cli.py  test_poster_compiler.py  test_poster_preprocessor.py  test_preprocessor.py
tests/fixtures/: animate_malformed.md  animate_multi_animation.md  animate_positioning.md  animate_simple.md  arrows.md  callout_boxes.md  code_split.md  flow_diagram.md  manim_complex.md  manim_simple.md  math.md  minimal.md  poster_full.md  poster_invalid_grid.md  poster_minimal.md  poster_missing_section.md  table_split.md
